--- a/angular.json
+++ b/angular.json
@@ -53,7 +53,34 @@
                   "maximumError": "4kb"
                 }
               ],
-              "outputHashing": "all"
+              "outputHashing": "all",
+              "fileReplacements": [
+                {
+                  "replace": "src/app/app.constants.ts",
+                  "with": "src/app/app.constants.prod.ts"
+                }
+              ]
+            },
+            "testing": {
+              "budgets": [
+                {
+                  "type": "initial",
+                  "maximumWarning": "500kb",
+                  "maximumError": "1mb"
+                },
+                {
+                  "type": "anyComponentStyle",
+                  "maximumWarning": "2kb",
+                  "maximumError": "4kb"
+                }
+              ],
+              "outputHashing": "all",
+              "fileReplacements": [
+                {
+                  "replace": "src/app/app.constants.ts",
+                  "with": "src/app/app.constants.test.ts"
+                }
+              ]
             },
             "development": {
               "optimization": false,
